syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.multiplex";
option java_outer_classname = "MultiplexProto";

package streaming;

// Interface exported by the server.
service Multiplex {
  rpc Parse (stream StringRequest) returns (stream LongReply) {}
}

message StringRequest {
  string number = 1;
}

message LongReply {
  int64 value = 1;
}